--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -7,12 +7,13 @@
     margin: 0;
     border: 0;
     padding: 0;
+    outline: 0px;
     transition: all .3s;
     user-select: none;
 }
 
 ::-webkit-scrollbar {
-    width: 2.5px;
+    width: 0;
 }
 
 ::-webkit-scrollbar-track {
@@ -25,7 +26,7 @@
 }
 
 ::-webkit-scrollbar:horizontal {
-    height: 2.5px;
+    height: 5px;
 }
 
 ::-webkit-scrollbar-track:horizontal {
@@ -58,18 +59,27 @@ tbody {
     padding: 20px;
 }
 
-input:focus {
-    outline: 0px;
-}
-
 button, a {
     cursor: pointer;
+}
+
+a {
+    color: royalblue;
+    text-decoration: none;
+}
+
+ul {
+    margin-left: 50px;
+}
+
+li {
+    text-align: left;
 }
 
 #top-bar {
     position: fixed;
     top: 0;
-    left: 0;
+    left: 30px;
     right: 0;
     display: flex;
     z-index: 999999;
@@ -99,7 +109,7 @@ button, a {
 
 #menu-bar {
     position: fixed;
-    top: 30px;
+    top: 0;
     left: 0;
     bottom: 0;
     z-index: 999999;
@@ -108,8 +118,15 @@ button, a {
     -webkit-app-region: drag;
 }
 
+#pin-btn {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    z-index: 999999;
+}
+
 #pin-btn.pinned {
-    background-color: red;
+    background-color: rgb(55, 161, 91);
 }
 
 #box {
@@ -118,9 +135,9 @@ button, a {
     font-size: 20px;
     margin: auto;
     padding: 10px;
-    border-radius: 5px;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-    width: 66%;
+    border-radius: 0 0 5px 5px;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, .2), 0 6px 20px 0 rgba(0, 0, 0, .19);
+    width: 80%;
     height: 25px;
     overflow-x: auto;
     overflow-y: hidden;
@@ -132,14 +149,14 @@ button, a {
 }
 
 #last-calculation {
-    background-color: #d3d3d394;
-    color: #343434;
+    background-color: #808080;
+    color: #d3d3d3;
     font-size: 15px;
     margin: auto;
-    padding: 5px;
-    border-radius: 5px;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-    width: 66%;
+    padding: 10px;
+    border-radius: 5px 5px 0 0;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, .2), 0 6px 20px 0 rgba(0, 0, 0, .19);
+    width: 80%;
     height: 20px;
     overflow-x: auto;
     overflow-y: hidden;
@@ -157,20 +174,20 @@ button, a {
 }
 
 #notification {
-    display: none;
-    opacity: 0;
     position: fixed;
     background-color: #222222;
     color: #d3d3d3;
+    opacity: 0;
     bottom: 0;
     right: 0;
-    width: 33%;
+    width: 66%;
+    height: 0%;
     margin: 7.5px;
     padding: 20px;
     z-index: 10;
     border-radius: 5px;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-    transition: opacity .5s;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, .2), 0 6px 20px 0 rgba(0, 0, 0, .19);
+    transition: all .5s;
 }
 
 #notification-title {
@@ -183,23 +200,48 @@ button, a {
 }
 
 #notification-button1 {
-    display: none;
-    opacity: 0;
     background-color: #6934d3;
     color: #d3d3d3;
+    margin: 5px;
     padding: 10px;
     border-radius: 10vh;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, .2), 0 6px 20px 0 rgba(0, 0, 0, .19);
+    transition: all .3s ease-in-out;
+}
+
+#notification-button1:hover {
+    transform: translateY(-2px);
 }
 
 #notification-button2 {
-    display: none;
-    opacity: 0;
     background-color: #6934d3;
     color: #d3d3d3;
+    margin: 5px;
     padding: 10px;
     border-radius: 10vh;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, .2), 0 6px 20px 0 rgba(0, 0, 0, .19);
+    transition: all .3s ease-in-out;
+}
+
+#notification-button2:hover {
+    transform: translateY(-2px);
+}
+
+#scroll-container {
+    position: fixed;
+    top: 30px;
+    left: 30px;
+    right: 0;
+    z-index: 999999;
+    width: 100%;
+    height: 2.5px;
+}
+
+#scroll-bar {
+    background-image: linear-gradient(to right,#272727, #ffde59);
+    width: 0;
+    height: 2.5px;
+    border-radius: 5px;
 }
 
 .topbar-btn {
@@ -214,16 +256,13 @@ button, a {
     background-color: #343434;
 }
 
-.topbar-btn.active {
-    background-color: red;
-}
-
 .menubar-btn {
     background-color: #272727;
     color: #d3d3d3;
     display: block;
     width: 30px;
     height: 30px;
+    border-radius: 5px;
     -webkit-app-region: no-drag;
 }
 
@@ -232,12 +271,27 @@ button, a {
 }
 
 .menubar-btn.active {
-    background-color: red;
+    background-color: rgb(55, 161, 91);
 }
 
-.container {
+.root {
     margin-top: 30px;
+    margin-left: 30px;
     padding: 20px;
+}
+
+.btn {
+    background-color: #ffde59;
+    color: #343434;
+    margin: 5px;
+    padding: 10px;
+    border-radius: 10vh;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, .2), 0 6px 20px 0 rgba(0, 0, 0, .19);
+    transition: all .3s ease-in-out;
+}
+
+.btn:hover {
+    transform: translateY(-2px);
 }
 
 .cal-btn {
@@ -248,7 +302,7 @@ button, a {
     height: 50px;
     margin: 10px;
     border-radius: 5px;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, .2), 0 6px 20px 0 rgba(0, 0, 0, .19);
     transition: all .2s ease-in-out;
 }
 
@@ -265,7 +319,7 @@ button, a {
     height: 50px;
     margin: 10px;
     border-radius: 5px;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, .2), 0 6px 20px 0 rgba(0, 0, 0, .19);
     transition: all .2s ease-in-out;
 }
 
@@ -282,7 +336,7 @@ button, a {
     height: 50px;
     margin: 10px;
     border-radius: 5px;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, .2), 0 6px 20px 0 rgba(0, 0, 0, .19);
     transition: all .2s ease-in-out;
 }
 
@@ -299,7 +353,7 @@ button, a {
     height: 50px;
     margin: 10px;
     border-radius: 5px;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, .2), 0 6px 20px 0 rgba(0, 0, 0, .19);
     transition: all .2s ease-in-out;
 }
 
@@ -310,13 +364,13 @@ button, a {
 
 .cal-btn-function {
     background-color: #9867c5;
-    color: #343434;
+    color: #d3d3d3;
     font-weight: bold;
     width: 50px;
     height: 50px;
     margin: 10px;
     border-radius: 5px;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, .2), 0 6px 20px 0 rgba(0, 0, 0, .19);
     transition: all .2s ease-in-out;
 }
 
@@ -333,7 +387,7 @@ button, a {
     height: 50px;
     margin: 10px;
     border-radius: 5px;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, .2), 0 6px 20px 0 rgba(0, 0, 0, .19);
     transition: all .2s ease-in-out;
 }
 
@@ -350,7 +404,7 @@ button, a {
     height: 50px;
     margin: 10px;
     border-radius: 5px;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, .2), 0 6px 20px 0 rgba(0, 0, 0, .19);
     transition: all .2s ease-in-out;
 }
 
